# daily-builds

day-01-gh-repo-health-checker/: README.md  health_checker.py
day-02-secrets-sentinel/: .secretsignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  secretsentinel.yaml
day-02-secrets-sentinel/hooks/: pre-commit
day-02-secrets-sentinel/scanner/: __init__.py  detector.py  entropy.py  patterns.py  reporter.py
day-02-secrets-sentinel/terraform/: main.tf  outputs.tf  (+2 more)
day-03-log-incident-tracker/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
day-03-log-incident-tracker/.github/workflows/: day-03-ci.yml
day-03-log-incident-tracker/log_incident_tracker/: __init__.py  cli.py  incident_tracker.py  notifier.py  parser.py  patterns.py  reporter.py
day-03-log-incident-tracker/sample_data/: app_structured.json
day-03-log-incident-tracker/terraform/: main.tf  outputs.tf  variables.tf
day-03-log-incident-tracker/tests/: test_incident_tracker.py  test_parser.py
day-04-queryguard/: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
day-04-queryguard/.github/workflows/: ci.yml
day-04-queryguard/sample_data/: build_demo_db.py  sample_queries.sql  schema.sql
day-04-queryguard/tests/: test_rules.py
day-05-cloudenv-provisioner/: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt
day-06-pbi-pulse/: .env.example  Dockerfile  README.md  requirements.txt
day-07-transit-demand-analysis/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
(+52 files in other folders)
