[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "queryguard"
version = "1.0.0"
description = "SQL schema & query performance auditor for SQLite and PostgreSQL"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "psycopg2-binary>=2.9.9",
    "jinja2>=3.1.3",
]

[project.scripts]
queryguard = "queryguard.cli:main"

[tool.setuptools]
packages = ["queryguard"]
